--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,9 +69,14 @@ p{
 @media  (min-width : 1824px) {
   .container {
     width: 1794px;
+    }
+  .h1 {
+    text-size: 60px;
+  }
+  .p {
+    text-size: 48px;
   }
 }
-
  /* HEADER */
  header {
    color:#FFFFFF;
@@ -139,3 +144,55 @@ p{
   border: 2px solid #382920;
   box-shadow: 0px 2px 0px 0px #2b2720;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
