--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,10 +71,10 @@ p{
     width: 1794px;
     }
   .h1 {
-    text-size: 60px;
+    font-size: 60px;
   }
   .p {
-    text-size: 48px;
+    font-size: 48px;
   }
 }
  /* HEADER */
