--- a/CSS/style.css
+++ b/CSS/style.css
@@ -149,6 +149,7 @@ p{
   text-align: center;
   display: block;
   position: relative;
+  height: 300px;
 }
 .benefits ul {
   margin: 0 auto;
@@ -174,6 +175,7 @@ p{
   background-size: cover;
   text-align: center;
   padding: 4em 0;
+  height: 675px;
 }
 .pricing h2, .pricing p {
    color:#FFFFFF;
@@ -185,7 +187,7 @@ p{
  .pricing ul li {
    list-style-type: none;
  }
- .box {
+.box {
    padding:0 15px 15px;
    background: #FFFFFF;
    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.20);
@@ -210,11 +212,11 @@ p{
    margin:0 -15px 40px;
    padding:10px 0;
  }
-  .box h4 {
+ .box h4 {
    font-size:50px;
    font-weight: normal;
    margin:40px 0 10px;
-   color: #ed8517;
+   color:#f49929;
  }
  .box h4 span {
    font-size:32px;
@@ -232,22 +234,18 @@ p{
    margin-bottom:20px;
    font-weight: 100;
  }
-  .box .btn {
+ .box .btn {
    position:absolute;
    bottom:20px;
    left:20px;
    right:20px;
  }
- .small {
-   font-size: 12px;
-   color: #FEFEFE;
-   line-height: 15px;
-   font-style:italic;
-  }
+ 
  /* TESTIMONIALS */
  .testimonials {
-   padding:4em 0;
+   padding:2em 0;
    text-align: center;
+   height: 500px;
  }
  .testimonials h2 {
    color:#382920;
@@ -306,6 +304,7 @@ footer {
    position: relative;
    overflow: hidden;
    z-index: 0;
+   width: 1650px;
  }
  footer p, footer nav ul {
    font-size:14px;
@@ -339,6 +338,7 @@ footer {
    footer p, footer nav ul{
      padding: 2em 0;
      text-align: left;
+
    }
    footer .right-footer-block {
      background-color: #3498DB;
