--- a/CSS/style.css
+++ b/CSS/style.css
@@ -304,7 +304,7 @@ footer {
    position: relative;
    overflow: hidden;
    z-index: 0;
-   width: 1650px;
+   width: 100%;
  }
  footer p, footer nav ul {
    font-size:14px;
@@ -355,15 +355,15 @@ footer {
    height: 100vh;
    width:14.66666667%;
    color:#FFFFFF;
-   background: #34495E;
-   background-image: linear-gradient(206deg, #5F81A3 0%, #34495E 94%);
+   background: #382920;
+   background-image: linear-gradient(206deg, #C18C62 0%, #382920 94%);
    float:left;
    position: fixed;
    display:block;
  }
  .left-nav .site-logo {
    padding:20px 0;
-   background:#34495E;
+   background: #382920;
    display:block;
    text-align: center;
  }
@@ -394,15 +394,18 @@ footer {
    width:16px;
    text-align: center;
    margin-right:8px;
-}
  }
-.left-nav .items ul li a:active{
-   color: aqua;
+.left-nav .items ul li.active {
+   padding: 1em; 
+   width: 150px;
+   border-radius: 10px;
+   background: #382920;
 }
+
  /* LEFT NAVBAR SETTINGS */
  .left-nav .settings {
    position:absolute;
-   background:#22303E;
+   background:#382920;
    width:100%;
    bottom:0;
    left:0;
@@ -448,7 +451,7 @@ footer {
    font-weight: 100;
    margin:0 0 30px;
    font-size: 36px;
-   color: #3498DB;
+   color: #e79516;
    line-height: 44px;
    float: left;
    display:inline-block;
@@ -534,7 +537,7 @@ footer {
    margin:0;
  }
  .item-box h2 a {
-   color: #3498DB;
+   color: #e79516;
    text-decoration: none;
  }
  .item-box h2 img {
