--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@ p{
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
-  position: relative;
+  position: static;
 }
 .container: before,
 .container: after {
@@ -39,7 +39,7 @@ p{
   width: 96%;
   float: left;
   position: relative;
-  min-height: 1px;
+  min-height: auto;
   margin: 0 2% 20px;
 }
 @media (min-width: 768px){
@@ -352,6 +352,45 @@ footer {
    background:#F7F7F7;
  }
  .left-nav {
+  height: 100%;
+  width: 28px;
+  position: absolute;
+  -webkit-transition: all 0.3s ease-in-out;
+   -moz-transition: all 0.3s ease-in-out;
+   -o-transition: all 0.3s ease-in-out;
+   transition: all 0.3s ease-in-out;
+   transform: translate(-280px,0);
+     -webkit-transform: translate(-280px,0); /** Chrome & Safari **/
+     -o-transform: translate(-280px,0); /** Opera **/
+     -moz-transform: translate(-280px,0); /** Firefox **/
+ }
+.left-nav.open {
+   display:block;
+   width:280px;
+   -webkit-transition: all 0.3s ease-in-out;
+   -moz-transition: all 0.3s ease-in-out;
+   -o-transition: all 0.3s ease-in-out;
+   transition: all 0.3s ease-in-out;
+   transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+     z-index: 100;
+ }
+ .hamburger {
+   position:absolute;
+   z-index: 1000;
+   background:#34495E;
+   color:#FFF;
+   text-decoration: none;
+   font-size: 22px;
+   padding: 10px 15px;
+   border-radius: 4px;
+   left: 5px;
+   top: 15px;
+ }
+@media (min-width:992px) {
+ .left-nav {
    height: 100vh;
    width:14.66666667%;
    color:#FFFFFF;
@@ -360,6 +399,21 @@ footer {
    float:left;
    position: fixed;
    display:block;
+   transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+    }
+    .left-nav.open {
+     width:14.66666667%;
+     transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+   }
+   .hamburger {
+     display:none;
+   }
  }
  .left-nav .site-logo {
    padding:20px 0;
@@ -397,7 +451,7 @@ footer {
  }
 .left-nav .items ul li.active {
    padding: 1em; 
-   width: 150px;
+   width: 75%;
    border-radius: 10px;
    background: #382920;
 }
