--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,10 +42,15 @@ p{
   min-height: auto;
   margin: 0 2% 20px;
 }
-@media (min-width: 768px){
+@media (min-width: 400px){
   .container {
     width: 100%;
+    height: auto;  
+  }
+  .header .hero img{
+    width: 40%;
     height: auto;
+
   }
 }
 @media (min-width: 992px) {
